###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "option_pricing_server",
    version = "1.0.0",
)

# Required dependencies with correct syntax
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

# Register C++ toolchains
register_toolchains("@bazel_tools//tools/cpp:all")
