###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "option_pricing_server",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "grpc", version = "1.71.0")
bazel_dep(name = "spdlog", version = "1.15.2")
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# Register C++ toolchains
register_toolchains("@bazel_tools//tools/cpp:all")
